--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -41,13 +41,13 @@
         </div>
         <div><br>
             <label>Gender Identity: </label> <!-- radio buttons to click to select an option-->
-            <input type="radio" name="font" value="bold" id="male">
+            <input type="radio" for="male" name="gender" value="male" id="male">
             <label for="male">Male</label>
-            <input type="radio" name="font" value="bold" id="Female">
+            <input type="radio" for="female" name="gender" value="female" id="Female">
             <label for="male">Female</label>
-            <input type="radio" name="font" value="bold" id="non-binary">
+            <input type="radio" for="non-binary" name="gender" value="non-binary" id="non-binary">
             <label for="male">Non-binary</label>
-            <input type="radio" name="font" value="bold" id="I prefer not to answer">
+            <input type="radio" for="" name="gender" value="un-disclosed" id="un-disclosed">
             <label for="male">I prefer not to answer</label>
         </div>
         <div>
